2008-12-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-app.c: Show the application's actor when it receives focus.
	  This is a workaround.
	* src/home/hd-switcher.c: Show the tasks button having launched something.

2008-12-05  Gordon Williams <gordon.williams@collabora.co.uk>

	*  src/mb/hd-comp-mgr.c: Removed unmap_notify stuff from the effects
	  function and put it in its own callback. Added popup animation for
	  notifications (not the correct one, but it's a good placeholder)

2008-12-05  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c (BACKGROUND_COLOR, background_container,
	  applets_container, hd_home_view_constructed, bg_image_set_idle_cb,
	  hd_home_view_restack_applets, hd_home_view_add_applet): Put the
	  background into a background container, put all applets into an
	  applet container and raise the applets container above the
	  background container. Fixes applets are hidden behind background
	  bug.

2008-12-05  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-switcher.c
	* src/home/hd-task-navigator.c
	Reverted changes for blurred backgrounds on dialogs, as they caused
	problems with the VKB (and any new window that appears after a
	dialog)

	* src/tidy/tidy-blur-group.c
	Added variable initialisation and added a few checks to reduce redraws
	if nothing had changed

2008-12-04  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Prevent unmapping transition for secondary stackable windows. This is a
	temporary fix until the real stackable transitions are added.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_effect_map,
	hd_comp_mgr_effect_unmap):

2008-12-04  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c (hd_home_view_applet_motion): Hide close
	button if an applet is moved. Fixes NB#93709

2008-12-04  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-switcher.c
	* src/home/hd-home.c
	* src/home/hd-task-navigator.c
	* src/home/hd-task-navigator.h